# CBCTSim

./: .gitignore  CMakeLists.txt  CMakePresets.json  G4_BRASS.txt  G4_CESIUM_IODIDE.txt  ICRP110phantoms.cc  NISTmu.txt  README.md  W_RINDEX.csv  generate_macros.py  geo.mac  main.cc  muspectrum.mac  particleGun.cc  plotHisto.C  readme.md  run.mac  run_mt.mac  runloop.mac  runsingle.mac  scandet.mac  test0.mac  vis.mac
HPCScripts/: Istruzioni.txt  adept-env.yaml  hpc-cluster.yaml  hpc-slurm.yaml  job_C2.slurm  job_C2D.slurm  job_H4D.slurm  job_array.slurm  job_mt.slurm  run_all.sh  setup_software.sh  test_debug.slurm
HPC_env_settings/: adept-env.yaml  celeritas-env.yaml  envsetup.sh  spack.yaml
ICRPinclude/: ICRP110PhantomConstruction.hh  ICRP110PhantomNestedParameterisation.hh
ICRPsrc/: ICRP110PhantomConstruction.cc  ICRP110PhantomNestedParameterisation.cc
benchmarks/: STvsMT_CPU.txt  STvsMT_CPU2.txt  TestH3GoogleCloud.txt  Untitled 1.ods  general.txt  targetPhotonEmission.txt
celeritas docker spack/: Dockerfile.toolchain  cuda13error.txt  spack _celeritas.yaml  spack.yaml
include/: CBCTParams.hh  DetectorConstruction.hh  EventAction.hh  EventInfo.hh  Messenger.hh  MyHit.hh  PhysicsList.hh  PrimaryGeneratorAction2.hh  RunAction.hh  SteppingAction.hh  TrackInfo.hh  TrackingAction.hh  TxtWithHeaderReader.hh  action.hh  construction.hh  detector.hh  event.hh  generator.hh  physics.hh  run.hh  stepping.hh
results/01_waterCylinder/: G4_Al.txt  IPEMXraysCatalogue.txt  air_penelope primaryMap double 256x256.raw  air_penelope scatterMap double 256x256.raw  air_standardEM primaryMap double 256x256.raw  air_standardEM scatterMap double 256x256.raw  geo.mac  head_phantom_penelope primaryMap double 256x256.raw  head_phantom_penelope scatterMap double 256x256.raw  head_phantom_penelope.root  info.txt  ouputlog.txt  water_cylinder_penelope primaryMap double 256x256.raw  water_cylinder_penelope scatterMap double 256x256.raw  water_cylinder_standardEM primaryMap double 256x256.raw  water_cylinder_standardEM scatterMap double 256x256.raw  water_cylinder_standardEM.root
root_macro/: CMakeLists.txt  CMakePresets.json  air_penelope.root  air_standardEM.root  nist_w.txt  particleGun.root  plotHisto.C  run0.root  run01M.root  run01Mold.root  water_cylinder_penelope.root
src/: ActionInitialization.cc  CBCTParams.cc  DetectorConstruction.cc  EventAction.cc  HistoManager.cc  Messenger.cc  MyHit.cc  PhysicsList.cc  PrimaryGeneratorAction2.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc  TxtWithHeaderReader.cc  action.cc  construction.cc  detector.cc  event.cc  generator.cc  physics.cc  run.cc  stepping.cc
volumePartPyton/: sliceVol.py  slice_viewer.py
